--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Camerax">
+
+        <activity
+            android:name=".InstructionsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".CalibrationActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".CaptureActivity"
+            android:exported="false" />
+
+        <!-- Home / Launcher -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
